@@ -1,3 +1,8 @@
+2010-01-31  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR middle-end/42898
+	* gcc.dg/torture/pr42898-2.c: New test.
+
 2010-01-31  Richard Guenther  <rguenther@suse.de>
 
 	* gcc.dg/torture/pr42898.c: Skip -O0.
